--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Calculator_App</title>
-    <link rel="stylesheet" href="css/styles.css" />
+    <link rel="stylesheet" href="Css/styles.css" />
     <link rel="apple-touch-icon" sizes="180x180" href="favIcon/" />
     <link rel="icon" type="image/png" sizes="32x32" href="favIcon/" />
     <link
